EKSProject/eks-rsvp-deployment/manifests/rsvp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsvp-service
  labels:
    app: rsvp
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rsvp
