EKSProject/eks-rsvp-deployment/manifests/rsvp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsvp-ingress
  namespace: rsvp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: rsvp
    alb.ingress.kubernetes.io/healthcheck-path: /api/events
spec:
  rules:
    - http:
        paths:
          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: rsvp-service
                port:
                  number: 8080
